@@ -1,3 +1,10 @@
+bubba-backend (1.2.4.50) claire estelle; urgency=low
+
+  * Restarting samba when adding and deleting printers
+  * Only restart samba on dhclient LAN events.
+
+ -- PA Nilsson <pa@excito.com>  Tue, 09 Feb 2010 22:37:30 +0100
+
 bubba-backend (1.2.4.49) claire estelle; urgency=low
 
   * redivert samba dhcp3 hook, and install an own to exit hooks to enable
